# lg-pri-teleop-device

./: .clang-format  .gitignore  README.md  setup.py
config/: config.yaml  config.yaml.save
launch/: lg_teleop_device_launch.py
lg_teleop_device/: health_check_node.py
lg_teleop_device/control/: gamepad_control_node.py  head_control_node.py  skeleton_gamepad_control_node.py  twist_control_node.py
lg_teleop_device/lidar/: lidar_node.py
lg_teleop_device/media/: topic_media_node.py
lg_teleop_device/network/: network.py
lg_teleop_device/sensor/: imu_subscription_node.py  joint_states_node.py
scripts/: install_draco.sh
src/lg_draco/: CMakeLists.txt  package.xml
src/lg_draco/config/: config.yaml
src/lg_draco/launch/: lg_draco_launch.py
src/lg_draco/src/: draco_sender.cpp  tf_example.cpp
src/lg_teleop_device/: package.xml  setup.cfg  setup.py
src/lg_teleop_device/config/: config.yaml
src/lg_teleop_device/launch/: lg_teleop_device_launch.py
src/lg_teleop_device/lg_teleop_device/: abstract_teleop_node.py
src/lg_teleop_device/lg_teleop_device/control/: arm_control_node.py  head_control_node.py  waist_control_node.py
src/lg_teleop_device/lg_teleop_device/media/: media_node.py  topic_media_node.py
src/lg_teleop_device/lg_teleop_device/sensor/: joint_states_node.py  joint_states_subscription_node.py  mobile_sensor_subscription_node.py
